# pallet

./: .gitignore  CLAUDE.md  README.md  kind-config.yaml  main.py  pipe_demo.py  pyproject.toml  pytest.ini  tasks.py
.claude/commands/: build.md  prime.md  review.md  ship.md  tdd.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
charts/pallet-registry/: Chart.yaml  values-dev.yaml  values.yaml
docs/: A2A_PATTERN_IMPLEMENTATION.md  AGENT_DEVELOPMENT_GUIDE.md  DISCOVERY_AND_COMMUNICATION.md  LLM.md  LOGGING_GUIDE.md  OCI_ARTIFACT_PUSH_GUIDE.md  ORCHESTRATION_PATTERNS.md  QUICK_REFERENCE.md  README.md  REGISTRY_AND_DISCOVERY.md  RUNTIME_WORKFLOW_VERIFICATION.md  WORKFLOW_ENGINE.md  WORKFLOW_EXECUTION_WALKTHROUGH.md  WORKFLOW_YAML_TO_EXECUTION.md
scripts/: bootstrap-k8s.sh  bootstrap.sh  install-kind.sh  install-oras.sh  kill.sh  log_prompt.py  push_workflows.sh  verify-bootstrap.sh  verify_registry.sh
specs/: 6-workflows.md  phase2.md  phase3.md  phase4.md  phase5.md
specs/001-dev-env/: PLANNING_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/6-workflows/: part2-core-engine.md  part3-registry-integration.md
specs/archive/: 6-workflows.md
src/: __init__.py  cli_diagnose.py  discovery.py  logging_config.py  orchestrator.py  workflow_engine.py  workflow_registry.py
src/agent_cards/: build_agent_card.json  plan_agent_card.json  (+1 more)
tests/: README.md  test_log_prompt.py
workflows/: code-generation.yaml  parallel-analysis.yaml  smart-router.yaml
(+53 files in other folders)
